# plugin-stablediffusion

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
modular-fastapi/: main.py  settings.py  start.sh
modular-fastapi/lib/: __init__.py
modular-fastapi/lib/mfa-stablediffusion/: README.md  pyproject.toml  requirements.txt
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/: settings.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/export/: export_json.py  export_yaml.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/factories/: lora_factory.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/helpers/: directory.py  lora.py  pipeline.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/interfaces/: iexporter.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/loras/: README.md  __init__.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/managers/: pipeline_manager.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/models/: abstract_image_pipeline.py  base_image_pipeline.py  image_pipeline.py  lora.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/routers/: stable_diffusion_router.py
modular-fastapi/lib/mfa-stablediffusion/mfa-stablediffusion/serializers/: base_image_request.py  image_with_lora_request.py  lora_generation_request.py  lora_request.py  model_request.py
modular-fastapi/lib/sample-package/: pyproject.toml
modular-fastapi/lib/sample-package/sample-package/routers/: sample_router.py
modular-fastapi/lib/sample-package/sample-package/tests/: test_sample_router.py
modular-fastapi/plugin_handler/: main.py
modular-fastapi/plugin_handler/models/: plugin_handler.py
modular-fastapi/routers/: __init__.py
