[tool.poetry]
name = "modular-fastapi"
version = "0.1.0"
description = "FastAPI with Modular Plugin System"
authors = ["Alex Scotland"]
packages = [{ include = "modular-fastapi" }]

[tool.poetry.dependencies]
python = "^3.9"

# Reference sub-projects as local dependencies
# sample-package = { path = "/app/api/modular-fastapi/lib/sample-package", develop = true }
# As we add new packages, we must add them here and rerun `poetry lock` and `poetry install --no-root`
mfa-stablediffusion = { path = "/app/api/modular-fastapi/lib/mfa-stablediffusion/"}


[tool.poetry.group.plugins.dependencies]
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
fastapi-offline = "^1.7.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
black = "^21.9b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
