[tool.poetry]
name = "sample-package"
version = "0.1.0"
description = "Example plugin"
authors = ["Alex Scotland"]
packages = [{ include = "sample-package" }]

[tool.poetry.dependencies]
python = "^3.9" # Keep
modular-fastapi = {path = "/app/api/"}  # Uses main API’s FastAPI version
requests = "^2.31.0"  # Plugin-specific dependency

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
